# Makefile.am

bashrcdir = $(pkgdatadir)/bashrc.d

# bashrc_DATA = dircolors.sh

# CLEANFILES = $(bashrc_DATA)

# EXTRA_DIST = dircolors.sh.in

# edit = sed -e 's:@pkgdatadir[@]:$(pkgdatadir):g'

# dircolors.sh: dircolors.sh.in Makefile
# $(edit) < $(srcdir)/dircolors.sh.in > dircolors.sh

dist_bashrc_DATA = bash-completion.sh
